# storypoint-shuffle

./: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: chromatic.yml  clippy-lint.yml  fly-deploy.yml  frontend-lint.yml  pr-lints.yml
frontend/: .env.example  .gitignore  chromatic.config.json  index.css  index.html  package.json  storypoint-shuffle.css  vite.config.ts
frontend/.storybook/: main.ts  modes.ts  preview-head.html  preview.tsx
frontend/src/: App.tsx  Home.tsx  Room.tsx  SocketContext.tsx  main.tsx  types.ts  useSocket.ts  vite-env.d.ts
frontend/src/components/: agreement.component.tsx  agreement.stories.ts  card-selector.component.tsx  card-selector.stories.tsx  central-card.component.tsx  central-card.stories.ts  central-card.stories.tsx  create-room-form.component.tsx  create-room-form.stories.ts  dialog.component.tsx  fibonacci.component.tsx  join-room-dialog.component.tsx  join-room-dialog.stories.tsx  join-room-form.component.tsx  join-room-form.stories.ts  join-room.component.tsx  join-room.stories.ts  lightswitch.component.tsx  logo.component.tsx  logo.stories.ts  player-card.component.tsx  player-card.stories.ts  player-card.stories.tsx  room-headline.component.tsx  room-headline.stories.tsx  tooltip.component.tsx
frontend/src/contexts/: dialog.context.ts  socket.context.ts  toaster.context.ts  tooltip.context.ts
frontend/src/hooks/: breakpoints.hook.tsx  (+5 more)
src/: handlers.rs  main.rs  types.rs
(+4 files in other folders)
